Hashtag - Post - Home - Loading

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-*::-webkit-scrollbar{
+body::-webkit-scrollbar{
     display: none;
+    
+}
+*{
+    scroll-behavior: smooth;
+}
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-thumb {
+  width: 24px;
+  border-radius: 12px;
+  background-clip: padding-box;
+  border: 10px solid transparent;
+  scrollbar-color: #007 #bada55;
+}
+
+*::-webkit-scrollbar-thumb {        
+  box-shadow: inset 0 0 0 10px;
 }
 body{
     background: #18191A;
